--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
 		<script src="js/SaveSystem.js" defer></script>
 		<script src="js/Custom.js" defer></script>
 		<script src="js/Cheatcodes.js" defer></script>
+		<script src="js/panel/PanelBridge.js" defer></script>
 		<meta property="og:title" content="Play Plants vs Zombies Modded Online" />
 		<meta
 			property="og:description"
