feat: Introduce an AI player with a neural network brain, experience memory, reward system, knowledge base, and a dedicated UI.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="js/panel/GameStatsModal.css">
     <link rel="stylesheet" href="js/panel/GameMapModal.css">
     <link rel="stylesheet" href="js/panel/SunTrackerModal.css">
+    <link rel="stylesheet" href="js/panel/AI/AIModal.css">
     
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -448,23 +449,36 @@
     <div id="topBarOverlay">
         <button class="btn btn-game-stats" id="gamePanelBtn" style="display:none;" onclick="GameStatsModal.open(); GameMapModal.open();">📊 Game Panel</button>
         <button class="btn btn-sun-tracker" id="sunTrackerBtn" style="display:none; background: linear-gradient(135deg, rgba(255,193,7,0.2), rgba(255,152,0,0.15)); border-color: rgba(255,193,7,0.4); color: #ffc107; margin-left: 8px;" onclick="SunTrackerModal.toggle()">☀️ Sun Tracker</button>
+        <button class="btn btn-ai-player" id="aiPlayerBtn" style="display:none; background: linear-gradient(135deg, rgba(76,175,80,0.2), rgba(33,150,243,0.15)); border-color: rgba(76,175,80,0.4); color: #4caf50; margin-left: 8px;" onclick="AIModal.toggle()">🤖 AI Player</button>
     </div>
 
     <!-- Scripts -->
     <script src="js/panel/GameStatsModal.js"></script>
     <script src="js/panel/GameMapModal.js"></script>
     <script src="js/panel/SunTrackerModal.js"></script>
+    
+    <!-- AI Player System -->
+    <script src="js/panel/AI/AIKnowledge.js"></script>
+    <script src="js/panel/AI/AIMemory.js"></script>
+    <script src="js/panel/AI/AIBrain.js"></script>
+    <script src="js/panel/AI/AIRewards.js"></script>
+    <script src="js/panel/AI/AIPlayer.js"></script>
+    <script src="js/panel/AI/AIModal.js"></script>
 
     <script>
-        // Show/hide Sun Tracker button when in level with sun
+        // Show/hide buttons when in level
         window.addEventListener('message', function(e) {
             if (e.data && e.data.action === 'levelStart') {
                 const sunBtn = document.getElementById('sunTrackerBtn');
+                const aiBtn = document.getElementById('aiPlayerBtn');
                 if (sunBtn) sunBtn.style.display = e.data.hasSun ? 'flex' : 'none';
+                if (aiBtn) aiBtn.style.display = 'flex'; // AI always available
             }
             if (e.data && e.data.action === 'toggleSaveButton') {
                 const sunBtn = document.getElementById('sunTrackerBtn');
+                const aiBtn = document.getElementById('aiPlayerBtn');
                 if (sunBtn && e.data.visible) sunBtn.style.display = 'none';
+                if (aiBtn && e.data.visible) aiBtn.style.display = 'none';
             }
         });
     </script>
